@@ -1,0 +1,3 @@
+dctable <-
+function(x, ...)
+UseMethod("dctable")
