@@ -1,0 +1,3 @@
+dctable <-
+function(x, ...)
+attr(x, "dctable")
